@@ -3207,9 +3207,14 @@
         <column name="options" key="csum" type='{"type": "boolean"}'>
           <p>
             Optional.  Compute encapsulation header (either GRE or UDP)
-            checksums on outgoing packets.  Default is disabled, set to
-            <code>true</code> to enable.  Checksums present on incoming
-            packets will be validated regardless of this setting.
+            checksums on outgoing packets. When unset (the default value),
+            checksum computing for outgoing packets is enabled for UDP IPv6
+            tunnels, and disabled otherwise. When set to false, no checksums
+            will be computed for outgoing tunnel encapsulation packets. When
+            true, checksums will be computed for all outgoing tunnel
+            encapsulation packets. Checksums present on incoming packets will
+            be validated regardless of this setting. Incoming packets without
+            a checksum will also be accepted regardless of this setting.
           </p>
 
           <p>
